--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ databases/*.db*
 *.o
 *.o.dSYM
 # Typescript build artifacts
+.*-dist/
 tools/set-import/importer.js
 tools/modlog/converter.js
 *.tsbuildinfo
